--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,2 +1,66 @@
-body
-   background-color: #fff
+.text 
+   color: #FFF
+   font-size: 20px
+   font-weight: 700
+   line-height: 48px
+
+.header-menu
+   display: flex
+   justify-content: space-between
+   align-items: center
+   padding: 2em 7em
+   &__nav
+      display: flex
+      gap: 2.5em
+      &-link
+         text-decoration: none
+         color: #FFF
+         text-align: center
+         font-family: Jost
+         font-size: 20px
+         font-style: normal
+         font-weight: 400
+         line-height: 32px
+ 
+.header-content
+   display: flex
+   justify-content: space-around
+   margin: 0 125px
+   &__left
+      margin-top: 170px
+      &-title
+         color: #FFF
+         font-size: 40px
+         font-weight: 600
+         line-height: 50px
+         margin-bottom: 20px
+      &-text
+         width: 380px
+         color: #FFF
+         font-size: 16px
+         font-weight: 400
+         line-height: 26px
+         margin-bottom: 50px
+      &-btn
+         color: #ffffff
+         text-align: center
+         font-size: 14px
+         font-weight: 400
+         line-height: 20px
+         padding: 15px 25px
+         border-radius: 5px
+         background: #D52027
+         text-decoration: none
+         display: inline-block
+   &__right
+      display: flex
+      &-img
+         max-width: 473px
+         max-height: 573px
+
+   
+
+         
+
+
+   
