--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,14 +1,14 @@
-
+@import 'mixin'
 @import 'header'
 
-body
+*
    margin: 0
    padding: 0
    box-sizing: border-box
+
+header
+   background: #141024
+   
+.container
+   max-width: 1200px
    margin: 0 auto
-
-.block
-   color: #000
-	
-
-
