--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,16 @@
 @import 'mixin'
+@import 'variable'
 @import 'header'
+@import 'section-text'
 
 *
    margin: 0
    padding: 0
    box-sizing: border-box
+
+body
+   font-family: 'Jost', sans-serif
+   font-style: normal
 
 header
    background: #141024
@@ -12,4 +18,3 @@ header
 .container
    max-width: 1200px
    margin: 0 auto
-   color: black
