--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -23,7 +23,7 @@
 .header-content
    display: flex
    justify-content: space-around
-   background-image: url(/img/header/header.png)
+   background-image: url('/img/header/header.png')
    background-size: 39%
    background-repeat: no-repeat
    background-position: 635px 90px
