--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,9 @@
 @import 'header'
 @import 'section-text'
 @import 'card-item'
+@import 'section-info'
+@import 'form'
+@import 'footer'
 
 *
    margin: 0
